# autoAPI/swagger/swagger.yml
@@ -871,49 +871,59 @@ paths:
         "401":
           description: '{string} sign up failed'
   /tag/ability/list:
-    post:
+    get:
       tags:
       - tag
-      description: New user must sign up.
+      description: Get ability tags list.
       operationId: TagController.TagAbilityList
       responses:
         "200":
-          description: '{string} sign up successful'
-        "401":
-          description: '{string} sign up failed'
+          description: ""
+          schema:
+            $ref: '#/definitions/models.TagList'
+        "201":
+          description: '{string} none tag exist'
   /tag/industry/list:
-    post:
+    get:
       tags:
       - tag
-      description: New user must sign up.
+      description: Get industry tag list.
       operationId: TagController.TagIndustryList
       responses:
         "200":
-          description: '{string} sign up successful'
-        "401":
-          description: '{string} sign up failed'
+          description: ""
+          schema:
+            $ref: '#/definitions/models.TagList'
+        "201":
+          description: '{string} none tag exist'
   /tag/position/list:
-    post:
+    get:
       tags:
       - tag
-      description: New user must sign up.
+      description: Get position tag list.
       operationId: TagController.TagPositionList
       responses:
         "200":
-          description: '{string} sign up successful'
-        "401":
-          description: '{string} sign up failed'
+          description: ""
+          schema:
+            $ref: '#/definitions/models.TagList'
+        "201":
+          description: tag exist
+          schema:
+            $ref: '#/definitions/none'
   /tag/university/list:
-    post:
+    get:
       tags:
       - tag
-      description: New user must sign up.
+      description: Get university tags list.
       operationId: TagController.TagUniversityList
       responses:
         "200":
-          description: '{string} sign up successful'
-        "401":
-          description: '{string} sign up failed'
+          description: ""
+          schema:
+            $ref: '#/definitions/models.TagList'
+        "201":
+          description: '{string} none tag exist'
   /user/{Uid}/info:
     get:
       tags:
@@ -1062,16 +1072,20 @@ paths:
         "406":
           description: '{string} avatar upload failed'
   /user/company/suitability/list:
-    post:
+    get:
       tags:
       - user
-      description: New user must sign up.
+      description: Get the user-company suitability list.
       operationId: UserController.CompanySuitabilityList
       responses:
         "200":
-          description: '{string} sign up successful'
+          description: ""
+          schema:
+            $ref: '#/definitions/models.GetCompanySuitabilityList'
         "401":
-          description: '{string} sign up failed'
+          description: '{string} auth failed'
+        "402":
+          description: '{string} user not existed'
   /user/editPassword:
     post:
       tags:
@@ -1204,16 +1218,49 @@ paths:
         "402":
           description: '{string} user not existed'
   /user/platform/setting:
+    get:
+      tags:
+      - user
+      description: Get user's platform setting information
+      operationId: UserController.PlatformInformation
+      parameters:
+      - in: header
+        name: Token
+        description: The token to conform
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.UserPlatformSetting'
+        "401":
+          description: '{string} auth failed'
+        "402":
+          description: '{string} user not existed'
     post:
       tags:
       - user
       description: New user must sign up.
       operationId: UserController.EditPlatformSetting
+      parameters:
+      - in: header
+        name: Token
+        description: The token to conform
+        required: true
+        type: string
+      - in: body
+        name: RequestBody
+        description: models.UserPlatformSetting
+        schema:
+          $ref: '#/definitions/object'
       responses:
         "200":
-          description: '{string} sign up successful'
+          description: '{string} edit successful'
         "401":
-          description: '{string} sign up failed'
+          description: '{string} auth failed'
+        "402":
+          description: '{string} user not existed'
   /user/tel/edit:
     post:
       tags:
@@ -1283,6 +1330,20 @@ definitions:
         format: int64
       company_name:
         type: string
+  models.CompanySuitability:
+    title: CompanySuitability
+    type: object
+    properties:
+      company_avatar:
+        type: string
+      company_id:
+        type: integer
+        format: int64
+      company_name:
+        type: string
+      suitability:
+        type: number
+        format: float
   models.EditSettingBody:
     title: EditSettingBody
     type: object
@@ -1316,6 +1377,17 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/models.TagForUserModel'
+  models.GetCompanySuitabilityList:
+    title: GetCompanySuitabilityList
+    type: object
+    properties:
+      length:
+        type: integer
+        format: int64
+      resp_body:
+        type: array
+        items:
+          $ref: '#/definitions/models.CompanySuitability'
   models.GetUserBaseInformation:
     title: GetUserBaseInformation
     type: object
@@ -1397,9 +1469,6 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/models.TagForUserModel'
-  models.GetUserPlatformSetting:
-    title: GetUserPlatformSetting
-    type: object
   models.Mission:
     title: Mission
     type: object
@@ -1487,6 +1556,15 @@ definitions:
         format: int64
       msg:
         type: string
+  models.Tag:
+    title: Tag
+    type: object
+    properties:
+      tag_id:
+        type: integer
+        format: int64
+      tag_name:
+        type: string
   models.TagForCompanyModel:
     title: TagForCompanyModel
     type: object
@@ -1514,6 +1592,19 @@ definitions:
     title: TagForUserModelID
     format: int64
     type: integer
+  models.TagList:
+    title: TagList
+    type: object
+    properties:
+      category_id:
+        type: integer
+        format: int64
+      category_name:
+        type: string
+      tags_list:
+        type: array
+        items:
+          $ref: '#/definitions/models.Tag'
   models.UserAttentionCompanyList:
     title: UserAttentionCompanyList
     type: object
@@ -1536,6 +1627,15 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/models.Mission'
+  models.UserPlatformSetting:
+    title: UserPlatformSetting
+    type: object
+  none:
+    title: none
+    type: object
+  object:
+    title: object
+    type: object
 tags:
 - name: auth
   description: |
